# crobot

./: README.md  crobot.cabal  stack.yaml
src/: Main.hs
src/Cryptocurrency/: Types.hs
src/Network/Exchange/: Bittrex.hs
