name:                crobot
version:             1.0
synopsis:            Simple stack project template with ISC license
description:         Please see README.md
homepage:            
license:             ISC
license-file:        LICENSE
author:              Dino Morelli
maintainer:          dino@ui3.info
copyright:           2017 Dino Morelli
category:            Unclassified
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     stack.yaml

executable crobot
   hs-source-dirs:   src
   main-is:          Main.hs
   ghc-options:      -Wall -fwarn-tabs
   default-language: Haskell2010
   build-depends:      base >= 4.7 && < 5
                     , aeson
                     , base16-bytestring
                     , cryptohash-sha512
                     , curl
                     , filepath
                     , mtl
                     , string-conv
                     , text
                     , time
   other-modules:    Network.Exchange.Bittrex

--test-suite tests
--   hs-source-dirs:   testsuite
--   main-is:          tests.hs
--   ghc-options:      -Wall -fwarn-tabs
--   default-language: Haskell2010
--   type:             exitcode-stdio-1.0
--   build-depends:      base >= 4.7 && < 5
--                     , altcoinbot
--   other-modules:    Foo
